syntax = "proto3";

option go_package = "go/buildingdata/v1;buildingdata";

package buildingdata.v1;

message BuildingLimit {
    string id = 1;
    string type = 2;
	repeated Features features = 3;
}

message HeightPlateau {
    string id = 1;
    string type = 2;
	repeated Features features = 3;
}

message SplitBuildingLimit {
    string id = 1;
}

message Features {
	string type = 1;
	Properties properties = 2;
	Geometry geometry = 3;
}

message Properties {
	double elevation = 1;
}

message Geometry {
	string type = 1;
	repeated Coordinate coordinates = 2;
} 

message Coordinate {
    double longitude = 1;
    double latitude = 2;
}