syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

option go_package = "go/buildingdata/v1;buildingdata";

package buildingdataaccess.v1;

service BuildingdataAccess {
    rpc CreateBuildingdata (CreateBuildingdataRequest) returns (CreateBuildingdataResponse) {
		option (google.api.http) = {
			post: "/v1/buildingdata"
			body: "*"
		};
	}
}

message CreateBuildingdataRequest {
	RequestBuildingLimit building_limits = 1;
	RequestHeightPlateau height_plateaus = 2;
}

message CreateBuildingdataResponse {
	// TODO
}

message RequestBuildingLimit {
	string type = 1;
	repeated RequestFeatures features = 2;
}

message RequestHeightPlateau {
	string type = 1;
	repeated RequestFeatures features = 2;
}

message RequestFeatures {
	string type = 1;
	RequestProperties properties = 2;
	RequestGeometry geometry = 3;
}

message RequestProperties {
	double elevation = 1;
}

message RequestGeometry {
	string type = 1;
	google.protobuf.Value coordinates = 2;
} 